Mon Jul 25 18:52:35 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * NEWS:
        * tools/modeling/plugins/org.opendds.modeling.help/html/gettingstarted/maintopic.html:

          Moved the content related to the Modeling SDK into the online help. 

        * tools/modeling/plugins/org.opendds.modeling.help/html/styles.css:

          Added a style entry for the release notes.

Mon Jul 25 17:39:42 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * README:

          Updates for forthcoming OpenDDS 2.4 release.

Mon Jul 25 17:08:11 UTC 2011  Don Hudson  <Don Hudson@ociweb.com>

        * tools/monitor/GraphGenerator.cpp:
        * tools/monitor/GvOptions.cpp:
        * tools/monitor/NodeGenerator.cpp:

          Replaced calls to QObject::toStdString() with toLocal8Bit().constData()
          to avoid QString-related aborts under windows.

Mon Jul 25 14:57:45 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * NEWS:

          Added description of changes to the OpenDDS Modeling SDK.

Fri Jul 22 18:47:55 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/dcps_lib/datareaderwriter_topic_connection.html:

          Added missing file.

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/diagrams/connecting_figures.html:

          Removed empty anchor causing empty box in Eclipse HTML rendering.

        * tools/modeling/plugins/org.opendds.modeling.help/html/reference/qos_policies/index.html:

          Fixed invalid link to styles.css.

Fri Jul 22 17:05:48 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/dcpslib_topic_shared.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/dcps_lib/topics_usage.html:

          Added discussion about using shared Topics.

Fri Jul 22 15:12:44 UTC 2011  Byron Harris  <harrisb@ociweb.com>
