@@ -26,12 +26,12 @@ accessed by your application.</p>
 
 <h2>Release Notes</h2>
 
-<h3>Version 2.4 of OpenDDS</h3>
+This section lists enhancements and fixes of OpenDDS Modeling SDK, as well as the version
+of OpenDDS and the Modeling SDK they correspond to.
 
-<p>
-  Enhancements and fixes of OpenDDS Modeling SDK, Version: 1.1.0.
-</p>
-
+<h3>
+  OpenDDS Modeling SDK, Version 1.1.0 (OpenDDS Version 2.4)
+</h3>
     <ul>
         <li>
       Topic types from a DcpsLib shown in Project Explorer can be
@@ -90,9 +90,9 @@ accessed by your application.</p>
         </li>
     </ul>
 
-<p>
-   Enhancements and fixes of OpenDDS Modeling SDK, Version: 1.0.1.
-</p>
+<h3>
+   Enhancements and fixes of OpenDDS Modeling SDK, Version 1.0.1 (OpenDDS Version 2.3)
+</h3>
 
     <ul>
         <li>
