@@ -1,9 +1,15 @@
+Mon Jul 25 19:22:29 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.help/html/gettingstarted/maintopic.html:
+
+          Reformatting the notes for readability.
+
 Mon Jul 25 18:52:35 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * NEWS:
         * tools/modeling/plugins/org.opendds.modeling.help/html/gettingstarted/maintopic.html:
 
-          Moved the content related to the Modeling SDK into the online help. 
+          Moved the content related to the Modeling SDK into the online help.
 
         * tools/modeling/plugins/org.opendds.modeling.help/html/styles.css:
 
